# game

./: .gitignore  CMakeLists.txt  Makefile  readme.md
src/: constants.h  main.cpp
src/game/: game.cpp  game.h  game_input.h  game_states.cpp  game_states.h
src/game/manager/: item_manager.cpp  item_manager.h  manager.cpp  manager.h  manager_manager.cpp  manager_manager.h
src/game/object/: game_item.cpp  game_item.h  game_object.h
src/level/boss/: boss.cpp  boss.h  boss_manager.cpp  boss_manager.h  rocket.cpp  rocket.h
src/level/cutscene/: cutscene_manager.cpp  cutscene_manager.h  dialog.cpp  dialog.h
src/level/enemies/: enemy.cpp  enemy.h  enemy_manager.cpp  enemy_manager.h
src/level/player/: player.cpp  player.h  player_manager.cpp  player_manager.h
src/level/trampoline/: trampoline.cpp  trampoline.h  trampoline_manager.cpp  trampoline_manager.h
src/menu/: menu_manager.cpp  menu_manager.h
src/menu/level_select/: level_select_manager.cpp  level_select_manager.h  level_tile.cpp  level_tile.h
src/sdl/: mixer.cpp  mixer.h  renderer.cpp  renderer.h  texture.cpp  texture.h  window.cpp  window.h
src/ui/background/: background.cpp  background.h  background_manager.cpp  background_manager.h
src/ui/components/: component_manager.cpp  component_manager.h  ui_component.cpp  ui_component.h
src/ui/components/button/: button.cpp  button.h  button_manager.cpp  button_manager.h
src/ui/labels/: label.cpp  label.h  label_manager.cpp  label_manager.h
src/ui/labels/score/: number.cpp  number.h  score_manager.cpp  score_manager.h
src/ui/slide/: slide.cpp  slide.h  slide_manager.cpp  slide_manager.h
